# libepc

./: .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  gtk-doc.make  libepc-1.0.pc.in  libepc-2.0.pc.in  libepc-ui-1.0.pc.in  libepc-ui-2.0.pc.in  libepc-ui.pc.in  libepc.doap  libepc.pc.in
docs/reference/libepc/: .gitignore  Makefile.am  libepc-1.0-docs.xml  libepc-1.0-sections.txt  libepc-docs.sgml  libepc-docs.xml  libepc-sections.txt
examples/: .gitignore  consumer-ui.c  list-resources.c  lookup-resource.c  publisher-ui.c  publisher.glade  publisher.ui  server-credentials.c  service-browser.c  simple-publisher.c  test-consumer.c  test-publisher.c
libepc/: .gitignore  avahi-shell.c  avahi-shell.h  consumer.c  consumer.h  contents.c  contents.h  dispatcher.c  dispatcher.h  enums.c.in  enums.h.in  i18n.c  i18n.h  marshal.list  protocol.c  protocol.h  publisher.c  publisher.h  service-info.c  service-info.h  service-monitor.c  service-monitor.h  service-names.h  service-type.c  service-type.h  shell.c  shell.h  tls.c  tls.h
libepc-ui/: .gitignore  entropy-progress.c  entropy-progress.h  entropy-window.c  entropy-window.h  password-dialog.c  password-dialog.h  passworddialog.c  passworddialog.h  progress-window.c  progress-window.h
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  libepc.pot  lv.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  (+3 more)
tests/: .gitignore  framework.c  framework.h  test-consumer-by-info.c  test-consumer-by-name.c  test-consumer.c  test-dispatcher-001.c  test-dispatcher-local-collision.c  test-dispatcher-multiple-services.c  test-dispatcher-rename.c  test-dispatcher-reset.c  test-dispatcher-simple-service.c  test-dispatcher-subtypes.c  test-dispatcher-unique.c  test-expand-name.c  test-progress-hooks.c  test-publisher-authentication.c  test-publisher-bookmarks.c  test-publisher-change-name.c  test-publisher-libsoup-494128.c  test-publisher-unique.c  test-publisher.c  test-runner.sh  test-service-type.c
